--- a/AndroidStudioProjects/DAM_DharmaBonifacio/app/src/main/res/layout/activity_main.xml
+++ b/AndroidStudioProjects/DAM_DharmaBonifacio/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#BDA3EB"
     tools:context=".MainActivity">
 
     <TextView
@@ -13,8 +14,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="220dp"
+        android:layout_marginEnd="200dp"
         android:text="Examen de Admisión 2024"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -31,12 +33,11 @@
 
     <EditText
         android:id="@+id/editTextText"
-        android:layout_width="187dp"
-        android:layout_height="25dp"
+        android:layout_width="184dp"
+        android:layout_height="41dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="text"
-        android:text="Name"
         app:layout_constraintEnd_toEndOf="@+id/textView2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/textView2"
@@ -54,8 +55,8 @@
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
-        android:layout_width="192dp"
-        android:layout_height="30dp"
+        android:layout_width="194dp"
+        android:layout_height="42dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textEmailAddress"
